# cargo-embassy

./: Cargo.toml
src/: cli.rs  init.rs  main.rs
src/cli/: init_args.rs
src/templates/: Cargo.toml.template  main.rs.esp.template
