[package]
name = "cargo-embassy"
version = "0.3.1"
edition = "2021"
license-file = "LICENSE"
description = "Get up and running with Embassy in seconds."
repository = "https://github.com/AdinAck/cargo-embassy"
categories = ["no-std", "embedded", "command-line-interface"]

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
